# gemeni_cli_agent

./: .gitignore  README.md  main.py  pyproject.toml  test_get_file_content.py  test_run_python_file.py
functions/: call_function.py  get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
